Teraz zostało już tylko zrobienie podziału B!

--- a/Całość/notatnik.ipynb
+++ b/Całość/notatnik.ipynb
@@ -355,6 +355,61 @@
     "B[np.where(np.abs(B) < 1e-15)] = 0\n",
     "B"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6]])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U, S, VT = np.linalg.svd(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.42866713, -0.56630692, -0.7039467 ],\n",
+       "       [ 0.80596391,  0.11238241, -0.58119908],\n",
+       "       [ 0.40824829, -0.81649658,  0.40824829]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VT"
+   ]
   }
  ],
  "metadata": {
