Do poprawienia szukanie ostatniego miejsca zerowego

--- a/Całość/notatnik.ipynb
+++ b/Całość/notatnik.ipynb
@@ -4,22 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Teraz, mając rozkład $M^TM = \\bar{U} \\Sigma \\bar{U}^{-1}$, trzeba się zastanowić co dalej -- jak zrobić z tego SVD macierzy $M$?\n",
+    "Teraz, mając rozkład $MM^T = U \\Sigma U^{-1}$, trzeba się zastanowić co dalej -- jak zrobić z tego SVD macierzy $M$?\n",
     "\n",
-    "Niech $M = X\\Lambda Y^T$ będzie szukanym SVD. Wiemy, że:\n",
-    "1. $\\Lambda$ jest diagonalna i na diagonali ma pierwiastki z elementów diagonali $\\Sigma$.\n",
-    "2. kolumny $Y$ są wektorami własnymi $M^TM$, czyli $Y = \\bar{U}$. Jak teraz wyznaczyć $X$?\n",
-    "3. skoro znamy $M$, to mając równość $M = X\\Lambda Y^T$ mamy $X = M(\\Lambda Y^T)^{-1} = MY^{-T}\\Lambda^{-1} = MY\\Lambda^{-1}$.\n",
-    "\n",
-    "Wówczas, skoro $M = P_m C P_m^T$, to $C = P_m ^T M P_m = P_m ^T X \\Lambda Y^T P_m$, czyli:\n",
-    "$$B = \\begin{bmatrix}\n",
-    "U_1 & 0 & 0\\\\\n",
-    "0 & 1 & 0\\\\\n",
-    "0 & 0 & U_2\n",
-    "\\end{bmatrix}P_m ^T X \\Lambda Y^T P_m\\begin{bmatrix}\n",
-    "V_1 ^T & 0\\\\\n",
-    "0 & V_2 ^T\n",
-    "\\end{bmatrix}$$"
+    "Niech $M = XS Y^T$ będzie szukanym SVD. Wiemy, że:\n",
+    "1. $S$ jest diagonalna i na diagonali ma pierwiastki z elementów diagonali $\\Sigma$.\n",
+    "2. kolumny $X$ są wektorami własnymi $MM^T$, czyli $X = U$. Jak teraz wyznaczyć $Y$?\n",
+    "3. skoro znamy $M$, to mając równość $M = XS Y^T$ mamy $Y^T = (XS)^{-1}M = S^{-1}X^{-1}M = S^{-1}X^TM$"
    ]
   },
   {
