--- a/Całość/testy.ipynb
+++ b/Całość/testy.ipynb
@@ -2,100 +2,170 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from importlib import reload\n",
     "\n",
-    "import pelny_algorytm\n",
-    "reload(pelny_algorytm)\n",
-    "from pelny_algorytm import DACSVD"
+    "import bidiagonalizacja\n",
+    "reload(bidiagonalizacja)\n",
+    "from bidiagonalizacja import bidiagonalize\n",
+    "\n",
+    "import podziałB\n",
+    "reload(podziałB)\n",
+    "from podziałB import divideB\n",
+    "\n",
+    "def enforce_zeros(A: np.array) -> np.array:\n",
+    "    A[np.where(np.abs(A) < 1e-14)] = 0\n",
+    "    return A\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "A = np.random.rand(7, 4)\n",
+    "\n",
+    "U0, B, V0T, transposed = bidiagonalize(A)\n",
+    "B = enforce_zeros(B)[:B.shape[1]+1, :]\n",
+    "B1, B2, alphak, betak, k = divideB(B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.5488135 , 0.71518937, 0.60276338],\n",
-       "       [0.54488318, 0.4236548 , 0.64589411],\n",
-       "       [0.43758721, 0.891773  , 0.96366276],\n",
-       "       [0.38344152, 0.79172504, 0.52889492],\n",
-       "       [0.56804456, 0.92559664, 0.07103606],\n",
-       "       [0.0871293 , 0.0202184 , 0.83261985]])"
+       "array([[-1.21363646,  0.        ,  0.        ,  0.        ],\n",
+       "       [-2.92779077, -0.48036095,  0.        ,  0.        ],\n",
+       "       [ 0.        , -0.62708577, -0.4907934 ,  0.        ],\n",
+       "       [ 0.        ,  0.        , -0.77177326, -0.0771551 ],\n",
+       "       [ 0.        ,  0.        ,  0.        , -0.72825718]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.seed(0)\n",
-    "A = np.random.rand(6, 3)\n",
-    "A"
+    "B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-1.21363646,  0.        ],\n",
+       "        [-2.92779077, -0.48036095],\n",
+       "        [ 0.        , -0.62708577]]),\n",
+       " array([[-0.0771551 ],\n",
+       "        [-0.72825718]]),\n",
+       " -0.49079339643688685,\n",
+       " -0.7717732639176429,\n",
+       " 2)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "U, Lambda, VT = DACSVD(A)\n",
-    "trueSVD = np.linalg.svd(A)"
+    "B1, B2, alphak, betak, k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "U=\n",
-      "[[-0.25659855 -0.05565535  0.44018837  0.67169038 -0.50929445  0.16353916]\n",
-      " [-0.74359271  0.16197288  0.3705489  -0.38296749  0.05464003 -0.36589419]\n",
-      " [ 0.49148526  0.18479126  0.55665639  0.20560984  0.31713569 -0.52113112]\n",
-      " [ 0.36204674 -0.12267022  0.41349148 -0.597473   -0.54412799  0.17277072]\n",
-      " [-0.09267166 -0.65870524  0.37106271 -0.02976594  0.52270846  0.3817351 ]\n",
-      " [-0.00185081  0.69826849  0.22449641 -0.04508368  0.26030594  0.62628056]]\n",
-      "trueU=\n",
-      "[[-0.44018837  0.05565535 -0.25659855 -0.39731501 -0.73430522  0.20057539]\n",
-      " [-0.3705489  -0.16197288 -0.74359271  0.30338032  0.1991067  -0.38967305]\n",
-      " [-0.55665639 -0.18479126  0.49148526 -0.34994451  0.20019923 -0.50188365]\n",
-      " [-0.41349148  0.12267022  0.36204674  0.77600738 -0.25502947  0.12518579]\n",
-      " [-0.37106271  0.65870524 -0.09267166 -0.157994    0.49571824  0.38617763]\n",
-      " [-0.22449641 -0.69826849 -0.00185081 -0.02214603  0.26513399  0.62548587]]\n",
+      "[[0.5488135  0.71518937 0.60276338]\n",
+      " [0.54488318 0.4236548  0.64589411]\n",
+      " [0.43758721 0.891773   0.96366276]]\n",
+      "[[-0.54485754 -0.22481968 -0.80782819]\n",
+      " [-0.4678586  -0.71798254  0.51537307]\n",
+      " [-0.69587254  0.65875426  0.28601438]]\n",
+      "[1.97240984 0.25980472 0.16451307]\n",
+      "[[-0.43523327 -0.61267551 -0.65969745]\n",
+      " [-0.87118606  0.4714844   0.13688429]\n",
+      " [-0.2271714  -0.63429582  0.73896006]]\n",
       "\n",
-      "S=\n",
-      "[0.28324421 0.90280421 2.45539664]\n",
-      "trueS=\n",
-      "[2.45539664 0.90280421 0.28324421]\n",
-      "\n",
-      "VT=\n",
-      "[[-0.86465098  0.49631229  0.07779969]\n",
-      " [-0.24567559 -0.55282223  0.79626069]\n",
-      " [ 0.43820337  0.6693741   0.5999301 ]]\n",
-      "trueVT=\n",
-      "[[-0.43820337 -0.6693741  -0.5999301 ]\n",
-      " [ 0.24567559  0.55282223 -0.79626069]\n",
-      " [-0.86465098  0.49631229  0.07779969]]\n",
+      "[[0.5488135  0.71518937 0.60276338]\n",
+      " [0.54488318 0.4236548  0.64589411]\n",
+      " [0.43758721 0.891773   0.96366276]\n",
+      " [0.         0.         0.        ]]\n",
+      "[[-0.54485754 -0.22481968 -0.80782819  0.        ]\n",
+      " [-0.4678586  -0.71798254  0.51537307  0.        ]\n",
+      " [-0.69587254  0.65875426  0.28601438  0.        ]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "[1.97240984 0.25980472 0.16451307]\n",
+      "[[-0.43523327 -0.61267551 -0.65969745]\n",
+      " [-0.87118606  0.4714844   0.13688429]\n",
+      " [-0.2271714  -0.63429582  0.73896006]]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(f\"U=\\n{U}\\ntrueU=\\n{trueSVD[0]}\\n\")\n",
-    "print(f\"S=\\n{np.diag(Lambda)}\\ntrueS=\\n{trueSVD[1]}\\n\")\n",
-    "print(f\"VT=\\n{VT}\\ntrueVT=\\n{trueSVD[2]}\\n\")"
+    "np.random.seed(0)\n",
+    "A = np.random.rand(3, 3)\n",
+    "U, S, VT = np.linalg.svd(A)\n",
+    "print(f\"{A}\\n{U}\\n{S}\\n{VT}\\n\")\n",
+    "\n",
+    "A = np.vstack((A, np.zeros((1, A.shape[1]))))\n",
+    "U, S, VT = np.linalg.svd(A)\n",
+    "print(f\"{A}\\n{U}\\n{S}\\n{VT}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0202184 , 0.07103606, 0.0871293 , 0.92559664])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S = np.sort(np.random.rand(4)); S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.92559664, 0.0871293 , 0.07103606, 0.0202184 ])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pm = np.eye(len(S))[np.argsort(-S)]\n",
+    "Pm @ S"
    ]
   }
  ],
