Dodano notatnik z kodami do raportu

--- a/Całość/notatnik.ipynb
+++ b/Całość/notatnik.ipynb
@@ -4,6 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$D^2 + zz^T = M^TM$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$M^TM = QSQ^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Teraz, mając rozkład $MM^T = U \\Sigma U^{-1}$, trzeba się zastanowić co dalej -- jak zrobić z tego SVD macierzy $M$?\n",
     "\n",
     "Niech $M = XS Y^T$ będzie szukanym SVD. Wiemy, że:\n",
